pro/src/app/App/layouts/BasicLayout/LateralPanel/AdminSideNav/AdminSideNav.module.scss
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_size.scss" as size;
@use "styles/mixins/_outline.scss" as outline;
@use "styles/variables/_z-index.scss" as zIndex;

.nav-links {
  display: flex;
  flex-direction: column;
  height: 100%;
  border-right: rem.torem(1px) solid var(--color-border-subtle);

  &-header {
    @include fonts.body-accent;

    display: flex;
    align-items: center;
    justify-content: center;
    min-height: rem.torem(64px);
    border-bottom: rem.torem(1px) solid var(--color-border-subtle);
    margin-bottom: var(--size-spacing-s);
  }
}

.back-to-admin {
  margin: var(--size-spacing-l) var(--size-spacing-l) 0;
}

